--- a/package.json
+++ b/package.json
@@ -9,15 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.10.5",
+    "@emotion/react": "^11.10.5",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^2.9.10",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.1",
+    "@mui/styled-engine-sc": "^5.11.0",
     "@next/font": "13.0.7",
-    "@types/node": "18.11.17",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "eslint": "8.30.0",
-    "eslint-config-next": "13.0.7",
-    "next": "13.0.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "eslint-config-next": "^13.1.1",
+    "js-cookie": "^3.0.1",
+    "next": "^13.1.1",
+    "nextjs-progressbar": "^0.0.16",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.41.0",
+    "react-query": "^3.39.2",
+    "styled-components": "^5.3.6",
+    "typescript": "4.9.4",
+    "yarn": "^1.22.19",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.2"
   }
 }
